--- a/.github/workflows/docekr.yml
+++ b/.github/workflows/docekr.yml
@@ -33,4 +33,6 @@ jobs:
         with:
           context: .
           push: true
-          tags: user/app:latest
+          tags:
+            - gymnastiarag123/hapi:latest,
+            - gymnastiarag123/hapi:some-tag
